# publish-static

./: AGENTS.md  README.md
backend/preparar-dados/: .gitignore  Makefile  docker-compose.yml  environment.yml  main.py  pyproject.toml  requirements.txt
backend/preparar-dados/config/: pg.ini
backend/preparar-dados/data/changelog/: 20201121174100_add_tabela_ponto_parada_matriz_distancia.sql  20201123135100_add_tabela_ponto_parada_processamento.sql  20210712095300_porcentagem_interseccao.sql  20210712155300_copiar_dados.sql  20211103215500_inserir_dados_luccme.sql  20211115170000_criar_tabela_base.sql  20211115170001_criar_tabela_agregacao.sql  20211115170002_processar_dados.sql  20211116170001_processar_dados.sql  20211116170002_processar_dados.sql  20211116170003_processar_dados.sql
backend/preparar-dados/data/psql/linux/: backup2pgrestore.sh  pg2geojson.sh  pg2shp.sh  pgdump2backup.sh  shp2pg.sh  sql2pg.sh
backend/preparar-dados/data/psql/win/: backup2pgrestore.cmd  pg2shp.cmd  pgdump2backup.cmd  pgdump2sql.cmd  raster2pg.cmd  runsql.cmd  shp2pg.cmd  sql2pgdump_1.cmd  sql2pgdump_2.cmd
backend/preparar-dados/data/raster/: extract_raster.cmd  extract_raster.py  extract_raster.sh
backend/preparar-dados/data/sql/: create_gist_idx.sql
backend/preparar-dados/docker/: entrypoint.sh
backend/preparar-dados/src/: __init__.py  constants.py  module.py
backend/preparar-dados/src/infrastructure/: datasource.py  pg_data_source.py  util.py
backend/preparar-dados/src/services/add_new_field/: repository.py  service.py
docs/: index.html
frontend/: .env.development  (+8 more)
(+189 files in other folders)
