[tool.poetry]
name = "geospatialservice"
version = "0.1.0"
description = ""
authors = ["Heitor Guerra Carneiro <heitorgcarneiro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
